Deleting Hierarchy #44201

Closed
opened 2015-03-31 04:38:51 +02:00 by Andrei Nadin · 8 comments

System Information
OSX 10.10.3

Blender Version
Broken: 2.74 Release Candidate 4
Worked: 2.73

Short description of error
Right Click and choose Delete Hierarchy in the outliner crashes Blender

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
Load the attached Blend, in the outliner, right click the Cube and choose "Delete Hierarchy"

DeleteHeirarchy.blend

**System Information** OSX 10.10.3 **Blender Version** Broken: 2.74 Release Candidate 4 Worked: 2.73 **Short description of error** Right Click and choose Delete Hierarchy in the outliner crashes Blender **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps Load the attached Blend, in the outliner, right click the Cube and choose "Delete Hierarchy" [DeleteHeirarchy.blend](https://archive.blender.org/developer/F156676/DeleteHeirarchy.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @AnadinX

Added subscriber: @AnadinX

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2015-03-31 08:22:18 +02:00

This issue was referenced by 4153ff3610

This issue was referenced by 4153ff3610241cc4e4a73326eca49ee2797ee125

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4153ff3610.

Closed by commit 4153ff3610.
Author

phew, that was quick :)

phew, that was quick :)

This issue was referenced by a555fa5b28

This issue was referenced by a555fa5b2822ea6355109bccdf656a3a54e3f9c0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44201
No description provided.