Fix T44201: Crash Deleting Hierarchy  in Outliner

Typical error using '->next' member of a freed linked list item. A bit trickier
even here, since we have some recursion...

Trivial fix for nasty crasher, safe for 2.74 imho?